--- a/index.css
+++ b/index.css
@@ -28,7 +28,9 @@ body {
     outline: none;
     cursor: pointer;
     box-shadow: inset 0 -0.8vh 0 0 #e201c4;
-    transition: ease-in 0.3s;
+    transition: ease-in 0.2s;
+    position: relative;
+    z-index: 1;
 }
 
 button {
@@ -67,7 +69,7 @@ button {
     outline: none;
     cursor: pointer;
     box-shadow: inset 0 0 0 0 #e201c4;
-    transition: ease-in 0.3s;
+    transition: ease-in 0.1s;
     position: relative;
     z-index: 1;
 }
@@ -82,7 +84,7 @@ button {
     border-radius: 3px;
 }
 
-#button3:before {
+#button3::before {
     transition: 0.5s all ease;
     position: absolute;
     top: 0;
@@ -94,10 +96,76 @@ button {
     background-color:#e201c4;
 }
 
-#button3:hover:before {
+#button3:hover::before {
     transition: 0.5s all ease;
     left: 0;
     right: 0;
     opacity: 1;
     z-index: -1;
+}
+
+#button4 {
+    color: white;
+    background: rgb(59, 59, 59);
+    border: none;
+    font-size: 1.2em;
+    height: 7vh;
+    width: 15vw;
+    text-align: center;
+    margin: auto 20vw auto 15vw;
+    padding: auto;
+    border-radius: 3px;
+    outline: none;
+    cursor: pointer;
+    border: 2px solid #e201c4;
+    transition: ease-in 0.2s;
+    position: relative;
+    z-index: 1;
+}
+
+#button4::before {
+    content: "";
+    position: absolute;
+    border-radius: 0px 0px 20px 0px;
+    width: 20px;
+    height: 20px;
+    left: -1%;
+    top: -1%;
+    background: #e201c4;
+    transition: all 0.25s ease-in;
+    z-index: -1;
+}
+
+#button4::after {
+    content: "";
+    position: absolute;
+    border-radius: 20px 0px 0px 0px;
+    width: 20px;
+    height: 20px;
+    bottom: -1px;
+    right: -1px;
+    background: #e201c4;
+    z-index: -1;
+    transition: all 0.25s ease-in;
+}
+
+#button4:hover::before {
+    content: "";
+    position: absolute;
+    left: -1%;
+    right: 0;
+    bottom: 0;
+    height: 102%;
+    width: 51%;
+    border-radius: 0px;
+}
+
+#button4:hover::after {
+    content: "";
+    position: absolute;
+    right: -1;
+    bottom: -1;
+    height: 103%;
+    width: 51%;
+    border-radius: 0px;
 }
