--- a/index.css
+++ b/index.css
@@ -320,7 +320,6 @@ button {
 #button6 {
     color: white;
     background: rgb(59, 59, 59);
-    border: none;
     font-size: 1.2em;
     height: 7vh;
     width: 15vw;
@@ -334,6 +333,32 @@ button {
     transition: ease-in 0.4s;
     position: relative;
     z-index: 1;
+}
+
+#button6::before {
+    position: absolute;
+    content: "";
+    width: 20%;
+    height: 100%;
+    background:#e201c4;
+    border: 2px solid #e201c4;
+    border-radius: 50%;
+    top: -2px;
+    left: -10%;
+    z-index: -1;
+}
+
+#button6::after {
+    position: absolute;
+    z-index: -1;
+    content: "";
+    width: 20%;
+    height: 100%;
+    background:#e201c4;
+    border: 2px solid #e201c4;
+    border-radius: 50%;
+    top: -2px;
+    right: -10%;
 }
 
 #testcontainer {
