--- a/index.css
+++ b/index.css
@@ -416,3 +416,63 @@ button {
     background-color: white;
     text-align: center;
 }
+
+#textcontainer {
+    height: 100vh;
+    width: 100vw;
+    color: black;
+    position: relative;
+    background: rgb(255, 201, 201);
+}
+
+#header1 {
+    z-index: 3;
+    width: 100%;
+    margin: 60px;
+    text-align: center;
+    background: rgba(0,0,0,0);
+}
+
+#newinput {
+    position: relative;
+    margin: auto 36vw;
+    background: rgb(255, 201, 201);
+    width: 28vw;
+    height: 8vh;
+    border: 3px solid rgb(0, 0, 0);
+    border-radius: 15px;
+    outline: none;
+    font-size: 30px;
+    z-index: 1;
+}
+
+#inputtext {
+    color: black;
+    background:rgb(255, 201, 201);
+    position: absolute;
+    border-radius: 8px;
+    top: 11%;
+    left: 36.5%;
+    z-index: 2;
+    pointer-events: none;
+    font-size: 16px;
+    transition: all 0.4s ease;
+    padding: 0 0.5vw;
+}
+
+#newinput:focus + #inputtext {
+    color:rgb(160, 7, 248);
+    top: 9%;
+    font-size: 12px;
+}
+
+#newinput::before {
+    position: absolute;
+    z-index: -1;
+    content: 'Input your password here.';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: red;
+}
